--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-media-recorder-2": "^1.6.23",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.25.1"
   },
